[tool.poetry]
name = "multi-currency"
version = "0.1.0"
description = ""
authors = ["marcantoinec <macoindreau@hopia.eu>"]
readme = "README.md"
packages = [{include = "multi_currency"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.0"
mypy = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
